--- a/static/admin.html
+++ b/static/admin.html
@@ -58,6 +58,12 @@
 			});
 		}
 
+		function previewPost() {
+			$('#previewForm input')[0].value = $('#inputTitle').val();
+			$('#previewForm input')[1].value = $('#inputContent').val()
+			$('#previewForm').submit();
+		}
+
 		function savePost() {
 			$('#postModal').off('hide.bs.modal', confirmHide);
 			$('#postModal').modal('hide');
@@ -130,7 +136,6 @@
 				type: 'GET',
 				data: {
 					offset: offset,
-					clean: true
 				},
 				success: function(entries) {
 					populateTable($.parseJSON(entries));
@@ -145,9 +150,10 @@
 		function init() {
 			$('#postModal').on('hide.bs.modal', confirmHide);
 			$(window).bind('beforeunload', confirmLeave);
-			$('form').submit( function() {
-				$(window).unbind('beforeunload', confirmLeave);
-			});
+			// Unbinding the warning message on form submits may not be necessary.
+			// $('form').submit( function() {
+			// 	$(window).unbind('beforeunload', confirmLeave);
+			// });
 			loadList(0);
 		}
 	</script>
@@ -199,13 +205,18 @@
 	        	
 					</div>
 					<div class="modal-footer lift">
+						<button type="button" class="btn btn-default" onclick=previewPost()>Preview</button>
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 						<button type="submit" class="btn btn-primary">Save</button>
 					</div>
 				</form>
 			</div>
 		</div>
-	</div>		
+	</div>
+	<form id="previewForm" action="/preview" method="post" target="_blank">
+		<input type="hidden" name="Title" />
+		<input type="hidden" name="Content" />
+	</form>
 	<script src="/static/jquery/jquery-2.0.3.min.js"></script>
 	<script src="/static/bootstrap/js/bootstrap.min.js"></script>
 </body>
