--- a/static/admin.html
+++ b/static/admin.html
@@ -174,9 +174,10 @@
 			$('#posts > tbody').html("<tr><td colspan=2>Saving post...</td></tr>")
 
 			var data = {
-				id:      $('#postID').val(),
-				Title:   $('#inputTitle').val(),
-				Content: $('#inputContent').val()
+				id:          $('#postID').val(),
+				Title:       $('#inputTitle').val(),
+				Content:     $('#inputContent').val(),
+				Description: $('#inputDescription').val()
 			};
 
 			data.date = $('#postDate').val() == "" ? new Date().toJSON() : $('#postDate').val();
@@ -206,6 +207,7 @@
 			var date = entry.Date == null ? "" : new Date(entry.Date).toJSON();
 			$('#postDate').val(date);
 			$('#inputTitle').val(entry.Title);
+			$('#inputDescription').val(entry.Description);
 			$('#inputContent').val(content);
 			$('#inputHidden').prop('checked', entry.Hidden);
 			wasHidden = entry.Hidden;
@@ -321,6 +323,12 @@ setting up your blog again if necessary.";
 							<label class="col-sm-1 control-label" for="inputTitle">Title</label>
 							<div class="col-sm-11">
 								<input type="text" class="form-control" name="Title" id="inputTitle" placeholder="Title">
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-sm-1 control-label" for="inputDescription">Description</label>
+							<div class="col-sm-11">
+								<input type="text" class="form-control" name="Title" id="inputDescription" placeholder="Description">
 							</div>
 						</div>
 						<div class="form-group">
